--- a/web/package.json
+++ b/web/package.json
@@ -11,7 +11,8 @@
     "@headlessui/react": "^1.6.1",
     "phosphor-react": "^1.4.1",
     "react": "^18.0.0",
-    "react-dom": "^18.0.0"
+    "react-dom": "^18.0.0",
+    "sass": "^1.51.0"
   },
   "devDependencies": {
     "@types/react": "^18.0.0",
